--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-
-
 <h2>User info</h2>
 <table class="table">
   <tbody>
@@ -7,14 +5,12 @@
       <th><%= image_tag @user.get_profile_image(100,100) %></th>
     </tr>
     <tr>
-      <th>name
-      <%= @user.name %>
-      </th>
+      <th>name</th>
+      <%=  %>
     </tr>
     <tr>
-      <th>introduction
-      <%= @user.introduction %>
-      </th>
+      <th>introduction</th>
+      <%= %>
     </tr>
   </tbody>
 </table>
@@ -50,4 +46,3 @@
   <p>Title：<%= book.title %></p>
   <p>Body：<%= book.body %></p>
 <% end %>
-
