--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,46 @@
   </head>
 
   <body>
+    <header>
+      <% if user_signed_in? %>
+        <li>
+          <%=link_to "Home",root_path %>
+        </li>
+        <li>
+          <%=link_to "User",users_path %>
+        </li>
+        <li>
+          <%=link_to "Books",books_path %>
+        </li>
+        <li>
+         <%= link_to "Log out", destroy_user_session_path, method: :get %>
+        </li>
+      <% else %>
+        <li>
+          <%=link_to "Home",root_path %>
+        </li>
+        <li>
+          <%=link_to "About",homes_about_path%>
+        </li>
+        <li>
+          <%=link_to "Sign up",new_user_registration_path %>
+        </li>
+        <li>
+          <%=link_to "Log in",user_session_path,method: :post %>
+        </li>
+      <% end %>
+
+      <% if user_signed_in? %>
+        <%= current_user.name %>
+      <% else %>
+        not login
+      <% end %>
+
+    </header>
     <%= yield %>
+
+    <footer>
+      <p>CopyRight Infratop.inc</p>
+    </footer>
   </body>
 </html>
