--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -43,11 +43,13 @@
         <th colspan="3"></th>
       </tr>
     </tbody>
-  </thead>
 
-<% @books.each do |book| %>
-  <%= image_tag book.user.get_profile_image(100,100) %>
-  <p>Title：<%= book.title %></p>
-  <p>Body：<%= book.body %></p>
-<% end %>
+ <% @users.each do |user| %>
+   <%= image_tag user.get_profile_image(100,100) %>
+   <p>Image:<%= image_tag user.get_profile_image(100,100) %></p>
+   <p>Name:<%= user.name %></p>
+ <% end %>
+
+
+
 
