--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -48,6 +48,6 @@
 <% @books.each do |book| %>
   <%= image_tag book.user.get_profile_image(100,100) %>
   <p>Title：<%= book.title %></p>
-  <p>Body：<%= book.body %></p>
+  <p>Opinion：<%= book.body %></p>
 <% end %>
 
