--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,18 +36,23 @@
 
 
   <thead>
-    <tbody>
-      <tr>
-        <th>Title</th>
-        <th>Opinion</th>
-        <th colspan="3"></th>
-      </tr>
-    </tbody>
+    <tr>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
   </thead>
+  <tbody>
+    <tr>
+      <td>
+        <% @books.each do |book| %>
+          <tr><%= image_tag book.user.get_profile_image(100,100) %></tr>
+          <tr>Title:<%= link_to book_path(book.id) do %>
+          <%= book.title %>
+          <% end %></tr>
+          <tr>Opinion：<%= book.body %></tr>
+        <% end %>
+      </td>
+    </tr>
 
-<% @books.each do |book| %>
-  <%= image_tag book.user.get_profile_image(100,100) %>
-  <p>Title：<%= book.title %></p>
-  <p>Opinion：<%= book.body %></p>
-<% end %>
-
+  </tbody>
