--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,14 +1,20 @@
 <h2>User info</h2>
+<%= form_with model: @user do |f| %>
+
 <div class="form-group">
   <label for="user_name">Name</label>
-  <%= text_field :name %>
+  <%= f.text_field :name %>
 </div>
 
 <div class="form-group">
   <label for="user_image">Image</label>
+  <%=f.file_field:get_profile_image,placeholder:"プロフィール画像",accept:"image/*" %>
 </div>
 
 <div class="form-group">
   <label for="user_introduction">Introduction</label>
-  <%= text_area :introduction %>
+  <%= f.text_area :introduction %>
 </div>
+
+  <%= f.submit"Update User" %>
+  <% end %>
