--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%= (params[:id]) %>
 <h2>User info</h2>
 <table class="table">
   <tbody>
@@ -6,15 +7,17 @@
     </tr>
     <tr>
       <th>name</th>
-      <%=  %>
+      <%= @user.name %>
     </tr>
     <tr>
       <th>introduction</th>
-      <%= %>
+      <%= @user.introduction %>
     </tr>
   </tbody>
 </table>
 
+
+<%=link_to "edit",edit_user_path(@user.id) %>
 
 
 
@@ -45,4 +48,5 @@
   <%= image_tag book.user.get_profile_image(100,100) %>
   <p>Title：<%= book.title %></p>
   <p>Body：<%= book.body %></p>
+
 <% end %>
