--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,14 +7,12 @@
       <th><%= image_tag @user.get_profile_image(100,100) %></th>
     </tr>
     <tr>
-      <th>name
-      <%= @user.name %>
-      </th>
+      <th>name</th>
+      <th><%= @user.name %></th>
     </tr>
     <tr>
-      <th>introduction
-      <%= @user.introduction %>
-      </th>
+      <th>introduction</th>
+      <th><%= @user.introduction %></th>
     </tr>
   </tbody>
 </table>
