--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,9 @@
-
-
 <h1>welcome to<strong>Bookers</strong></h1>
 <p>In<string>Bookers</string></p>
 <p>you can stare and exchange your opinions ,
 inpressions , and emotions</p>
 <p>about various books!</p>
+
+
+<a><%= link_to "Log in",user_session_path, method: :post %></a><br/>
+<a><%= link_to "Sign up",new_user_registration_path %></a>
