--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,13 +40,10 @@
         </li>
       <% end %>
 
-      <% if user_signed_in? %>
-        <%= current_user.name %>
-      <% else %>
-        not login
-      <% end %>
-
     </header>
+    <div>
+      <%= flash[:notice] %>
+    </div>
     <%= yield %>
 
     <footer>
