--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,6 +15,9 @@
   <label for="user_introduction">Introduction</label>
   <%= f.text_area :introduction %>
 </div>
-
+<div class="form-group">
   <%= f.submit"Update User" %>
+</div>
   <% end %>
+
+
