--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <header>
+      <span>Bookers</span>
       <% if user_signed_in? %>
         <li>
           <%=link_to "Home",user_path(current_user.id) %>
