--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,19 @@
-<h1>welcome to<strong>Bookers</strong></h1>
-<p>In<string>Bookers</string></p>
-<p>you can stare and exchange your opinions ,
-inpressions , and emotions</p>
-<p>about various books!</p>
-
-
-<a><%= link_to "Log in",user_session_path, method: :post %></a><br/>
-<a><%= link_to "Sign up",new_user_registration_path %></a>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+      <h1>welcome to<strong>Bookers</strong></h1>
+      <p>In<string>Bookers</string></p>
+      <p>you can stare and exchange your opinions ,
+       inpressions , and emotions</p>
+      <p>about various books!</p>
+      <div class="btn-wrapper col-10 mx-auto">
+        <div class="row">
+          <a><%= link_to "Log in",user_session_path, method: :post %></a>
+        </div>
+        <div class="row">
+          <a><%= link_to "Sign up",new_user_registration_path %></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
