--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Bookers2Ver2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -12,43 +12,64 @@
 
   <body>
     <header>
-      <span>Bookers</span>
-      <% if user_signed_in? %>
-        <li>
-          <%=link_to "Home",user_path(current_user.id) %>
-        </li>
-        <li>
-          <%=link_to "User",users_path %>
-        </li>
-        <li>
-          <%=link_to "Books",books_path %>
-        </li>
-        <li>
-         <%= link_to "Log out", destroy_user_session_path, method: :get %>
-        </li>
-      <% else %>
-        <li>
-          <%=link_to "Home",root_path %>
-        </li>
-        <li>
-          <%=link_to "About",homes_about_path%>
-        </li>
-        <li>
-          <%=link_to "Sign up",new_user_registration_path %>
-        </li>
-        <li>
-          <%=link_to "Log in",user_session_path,method: :post %>
-        </li>
-      <% end %>
-
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+           <span>Bookers</span>
+          </a>
+          <buttom class="navbar-toggler" type="button" data-toggle="collapse"
+           data-target="#navbarNavDropdown" aria-controls="navbaeNavDropdown" aria-expanded="false"
+           aria-lavel="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </buttom>
+          <div class="collapse navvar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li>
+                  <%=link_to "Home",user_path(current_user.id) %>
+                </li>
+                <li>
+                  <%=link_to "User",users_path %>
+                </li>
+                <li>
+                  <%=link_to "Books",books_path %>
+                </li>
+                <li>
+                  <%= link_to "Log out", destroy_user_session_path, method: :get %>
+                </li>
+              <% else %>
+                <li>
+                  <%=link_to "Home",root_path %>
+                </li>
+                <li>
+                  <%=link_to "About",homes_about_path%>
+                </li>
+                <li>
+                  <%=link_to "Sign up",new_user_registration_path %>
+                </li>
+                <li>
+                  <%=link_to "Log in",user_session_path,method: :post %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    <div>
-      <%= flash[:notice] %>
-    </div>
+
+    <main>
+    <p><%= flash[:notice] %></p>
     <%= yield %>
+    </main>
 
     <footer>
-      <p>CopyRight Infratop.inc</p>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
