--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,33 +21,41 @@
            aria-lavel="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </buttom>
-          <div class="collapse navvar-collapse" id="navbarNavDropdown">
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li>
-                  <%=link_to "Home",user_path(current_user.id) %>
+                  <%= link_to user_path(current_user.id),class: "nav-link text-light" do %>
+                  <i class="fas fa-home"></i> Home
+                  <% end %>
                 </li>
                 <li>
-                  <%=link_to "User",users_path %>
+                  <%= link_to users_path ,class: "nav-link text-light" do %>
+                  <i class="fas fa-users"></i> User
+                  <% end %>
                 </li>
                 <li>
-                  <%=link_to "Books",books_path %>
+                  <%= link_to books_path ,class: "nav-link text-light" do %>
+                  <i class="fas fa-book-open"></i> Books
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Log out", destroy_user_session_path, method: :get %>
+                  <%= link_to destroy_user_session_path, class: "nav-link text-light", method: :get  do  %>
+                  <i class="fas fa-sign-out-alt"></i> Log out
+                  <% end %>
                 </li>
               <% else %>
                 <li>
-                  <%=link_to "Home",root_path %>
+                  <%= link_to "Home",root_path %>
                 </li>
                 <li>
-                  <%=link_to "About",homes_about_path%>
+                  <%= link_to "About",homes_about_path%>
                 </li>
                 <li>
-                  <%=link_to "Sign up",new_user_registration_path %>
+                  <%= link_to "Sign up",new_user_registration_path %>
                 </li>
                 <li>
-                  <%=link_to "Log in",user_session_path,method: :post %>
+                  <%= link_to "Log in",user_session_path,method: :post %>
                 </li>
               <% end %>
             </ul>
