--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,55 +1,69 @@
-<h2>User info</h2>
-<table class="table">
-  <tbody>
-    <tr>
-      <th><%= image_tag @user.get_profile_image(100,100) %></th>
-    </tr>
-    <tr>
-      <th>name</th>
-      <th><%= @user.name %></th>
-    </tr>
-    <tr>
-      <th>introduction</th>
-      <th><%= @user.introduction %></th>
-    </tr>
-  </tbody>
-</table>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
 
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>name
+            <%= @user.name %>
+            </th>
+          </tr>
+          <tr>
+            <th>introduction
+            <%= @user.introduction %>
+            </th>
+          </tr>
+        </tbody>
+      </table>
 
-<%=link_to "edit",edit_user_path(@user.id) %>
+      <div class="row">
+        <a><%=link_to edit_user_path(@user.id) %></a>
+        <i class="fas fa-user-cog"></i>
+      </div>
 
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+      <div class="form-group">
+        <label for="book_title">Title</label><br/>
+        <%=f.text_field :title %>
+      </div>
+      <div class="form-group">
+        <label for="book_opinion">Opinion</label><br/>
+        <%=f.text_area :body %>
+      </div>
+       <div class="form-group">
+        <%=f.submit"Create Book",class: "btn-btn-success btn-lg" %>
 
+      </div>
+      <% end %>
+    </div>
 
-
-<h1>New book</h1>
-<%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%=f.text_field :title %>
-
-  <h4>Opinion</h4>
-  <%=f.text_area :body %><br />
-
-  <%=f.submit"Create Book" %>
-  <% end %>
-
-
+<div class="col-md-8 offset-md-1">
+<h2>Books</h2>
  <table class="table table-hover table-inverse">
   <thead>
     <tr>
+      <th></th>
       <th>Title</th>
       <th>Opinion</th>
       <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
+    <% @books.each do |book| %>
     <tr>
-     <% @books.each do |book| %>
-     <th><%= image_tag book.user.get_profile_image(100,100) %></th>
-     <th>Title：<%= link_to book_path(book.id) do %>
+     <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+     <td><%= link_to book_path(book.id) do %>
      <%= book.title %>
-     <% end %></th>
-     <th>Body：<%= book.body %></th>
-     <% end %>
+     <% end %></td>
+     <td><%= book.body %></td>
+
     </tr>
+    <% end %>
   </tbody>
 </table>
+</div>
+</div>
