--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,37 +1,42 @@
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
 
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>name
+            <%= @user.name %>
+            </th>
+          </tr>
+          <tr>
+            <th>introduction
+            <%= @user.introduction %>
+            </th>
+          </tr>
+        </tbody>
+      </table>
 
-<h2>User info</h2>
-<table class="table">
-  <tbody>
-    <tr>
-      <th><%= image_tag @user.get_profile_image(100,100) %></th>
-    </tr>
-    <tr>
-      <th>name</th>
-      <th><%= @user.name %></th>
-    </tr>
-    <tr>
-      <th>introduction</th>
-      <th><%= @user.introduction %></th>
-    </tr>
-  </tbody>
-</table>
+      <div class="row">
+        <a><%=link_to "edit",edit_user_path(@user.id) %></a>
+      </div>
 
-
-
-
-
-<h1>New book</h1>
-<%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%=f.text_field :title %>
-
-  <h4>Opinion</h4>
-  <%=f.text_area :body %><br />
-
-  <%=f.submit"Create Book" %>
-  <% end %>
-
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+      <div class="form-group">
+        <label for="book_title">Title</label>
+        <%=f.text_field :title %>
+      </div>
+      <div class="form-group">
+        <label for="book_opinion">Opinion</label>
+        <%=f.text_area :body %>
+      </div>
+       <div class="form-group">
+        <%=f.submit"Create Book" %>
+      </div>
+      <% end %>
 
   <thead>
     <tr>
