--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,16 +2,16 @@
   <div class="row">
     <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
       <h1>welcome to<strong>Bookers</strong></h1>
-      <p>In<string>Bookers</string></p>
+      <p>In<strong>Bookers</strong></p>
       <p>you can stare and exchange your opinions ,
        inpressions , and emotions</p>
       <p>about various books!</p>
       <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
-          <a><%= link_to "Log in",user_session_path, method: :post %></a>
-        </div>
+          <a><%= link_to "Log in",user_session_path,class: "btn btn-info btn-sm btn-block", method: :post %></a>
+        </div><br/>
         <div class="row">
-          <a><%= link_to "Sign up",new_user_registration_path %></a>
+          <a><%= link_to "Sign up",new_user_registration_path,class: "btn btn-success btn-sm btn-block" %></a>
         </div>
       </div>
     </div>
