--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,61 +1,63 @@
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
 
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>name
+            <%= @user.name %>
+            </th>
+          </tr>
+          <tr>
+            <th>introduction
+            <%= @user.introduction %>
+            </th>
+          </tr>
+        </tbody>
+      </table>
 
-<h2>User info</h2>
-<table class="table">
-  <tbody>
-    <tr>
-      <th><%= image_tag @user.get_profile_image(100,100) %></th>
-    </tr>
-    <tr>
-      <th>name
-      <%= @user.name %>
-      </th>
-    </tr>
-    <tr>
-      <th>introduction
-      <%= @user.introduction %>
-      </th>
-    </tr>
-  </tbody>
-</table>
+      <div class="row">
+        <a><%=link_to "edit",edit_user_path(@user.id) %></a>
+      </div>
 
-<a><%=link_to "edit",edit_user_path(@user.id) %></a>
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book do |f| %>
+      <div class="form-group">
+        <label for="book_title">Title</label><br/>
+        <%=f.text_field :title %>
+      </div>
+      <div class="form-group">
+        <label for="book_opinion">Opinion</label><br/>
+        <%=f.text_area :body %>
+      </div>
+       <div class="form-group">
+        <%=f.submit"Create Book",class: "btn-btn-success btn-lg" %>
 
-
-
-<h1>New book</h1>
-<%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%=f.text_field :title %>
-
-  <h4>Opinion</h4>
-  <%=f.text_area :body %><br />
-
-  <%=f.submit"Create Book" %>
-  <% end %>
-
-
-<h2>Users</h2>
-<table class="table">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Opinion</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-    </tbody>
-    <tr>
-
- <% @users.each do |user| %>
-   <%= image_tag user.get_profile_image(100,100) %>
-   <td>Image:<%= image_tag user.get_profile_image(100,100) %></td>
-   <td>Name:<%= user.name %></td>
-   <td><%= link_to "show",user_path(@user.id) %></td>
- <% end %>
- </tr>
- </table>
-
-
-
+      </div>
+      <% end %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+    <h2>Users</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>image</th>
+          <th>name</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tboby>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= image_tag user.get_profile_image(100,100) %></td>
+          <td><%= user.name %></td>
+          <td><%= link_to "show",user_path(@user.id) %></td>
+       </tr>
+      <% end %>
+      </table>
+    </div>
+</div>
 
