--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,8 +20,9 @@
       </table>
 
       <div class="row">
-        <a><%=link_to edit_user_path(@user.id) %></a>
+        <a><%=link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %></a>
         <i class="fas fa-user-cog"></i>
+        <% end %>
       </div>
 
       <h2 class="mt-3">New book</h2>
