--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,42 +6,42 @@
 
       <table class="table">
         <tbody>
+          <tr></tr>
           <tr>
-            <th>name
-            <%= @user.name %>
-            </th>
+            <th>name  </th>
+            <th><%= @user.name %></th>
           </tr>
           <tr>
-            <%= @user.introduction %>
-            </th>
+            <th>introduction</th>
+            <th><%= @user.introduction %></th>
           </tr>
         </tbody>
       </table>
 
       <div class="row">
-        <a><%=link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %></a>
+        <%=link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %>
         <i class="fas fa-user-cog"></i>
         <% end %>
       </div>
 
-      <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book do |f| %>
-      <div class="form-group">
-        <label for="book_title">Title</label><br/>
-        <%=f.text_field :title %>
-      </div>
-      <div class="form-group">
-        <label for="book_opinion">Opinion</label><br/>
-        <%=f.text_area :body %>
-      </div>
-       <div class="form-group">
-        <%=f.submit"Create Book",class: "btn-btn-success btn-lg" %>
-
-      </div>
-      <% end %>
+        <h2 class="mt-3">New book</h2>
+        <%= form_with model: @book do |f| %>
+        <div class="form-group">
+          <label for="book_title">Title</label><br/>
+          <%=f.text_field :title %>
+        </div>
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label><br>
+          <%=f.text_area :body %>
+        </div>
+        <div class="form-group">
+          <%=f.submit"Create Book",class: "btn btn-success" %>
+        </div>
+        <% end %>
     </div>
 
-    <div class="col-md-8-offset-md-1">
+
+    <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="table table-hover table-inverse">
         <thead>
