--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,59 +1,75 @@
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
 
-<h2>User info</h2>
-<table class="table">
-  <tbody>
-    <tr>
-      <th><%= image_tag current_user.get_profile_image(100,100) %></th>
-    </tr>
-    <tr>
-      <th>name</th>
-      <%=  %>
-    </tr>
-    <tr>
-      <th>introduction</th>
-      <%= %>
-    </tr>
-  </tbody>
-</table>
+      <table class="table">
+        <tbody>
+          <tr></tr>
+          <tr>
+            <th>name  </th>
+            <th><%= @user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= @user.introduction %></th>
+          </tr>
+        </tbody>
+      </table>
 
-<a><%= link_to "edit",edit_user_path(current_user.id) %></a>
+      <div class="row">
+        <%=link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
+      </div>
 
+        <h2 class="mt-3">New book</h2>
+        <%= form_with model: @book do |f| %>
+        <div class="form-group">
+          <label for="book_title">Title</label><br/>
+          <%=f.text_field :title %>
+        </div>
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label><br>
+          <%=f.text_area :body %>
+        </div>
+        <div class="form-group">
+          <%=f.submit"Create Book",class: "btn btn-success" %>
+        </div>
+        <% end %>
+    </div>
 
-<h1>New book</h1>
-<%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%=f.text_field :title %>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books detail</h2>
+      <table class="table">
+        <tbody>
+          <tr>
+            <td>
+              <%= image_tag @book.user.get_profile_image(100,100) %>
+              <br>
+              <%= link_to @book.user.name,user_path(@user.id) %>
+            </td>
+            <td>
+              <%= link_to book_path(@book.id) do %>
+                <%= @book.title %>
+              <% end %>
+            </td>
+            <td><%= @book.body %></td>
+            <td>
+              <% if @book.user==current_user %>
+                <%= link_to "edit",edit_book_path(@book.id),class: "btn btn-sm btn-success" %>
+              <% end %>
+            </td>
+            <td>
+              <% if @book.user==current_user %>
+                <%= link_to "destroy",book_path(@book.id),method: :delete, "data-confirm"=>"本当に消しますか？", class: "btn btn-sm btn-danger" %>
+              <% end %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
-  <h4>Opinion</h4>
-  <%=f.text_area :body %><br />
-
-  <%=f.submit"Create Book" %>
-  <% end %>
-
-
-  <thead>
-    <tbody>
-      <tr>
-        <th>Title</th>
-        <th>Opinion</th>
-        <th colspan="3"></th>
-      </tr>
-    </tbody>
-  </thead>
-
-<h2>Book detail</h2>
-<table class="table">
-  <tbody>
-    <tr>
-      <td><%= image_tag @book.user.get_profile_image(100,100) %></td>
-      <td><%= link_to book_path(@book.id) do %>
-      <%= @book.title %>
-      <% end %>
-      </td>
-      <td><%= @book.body %></td>
-      <td><%= link_to "edit",edit_book_path(@book.id) %></td>
-      <td><%= link_to "destroy",book_path(@book.id),method: :delete %></td>
-
-    </tr>
-  </tbody>
-</table>
