--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
                 </li>
                 <li>
                   <%= link_to users_path ,class: "nav-link text-light" do %>
-                  <i class="fas fa-users"></i> User
+                  <i class="fas fa-users"></i> Users
                   <% end %>
                 </li>
                 <li>
@@ -65,8 +65,8 @@
     </header>
 
     <main>
-    <p><%= flash[:notice] %></p>
-    <%= yield %>
+      <p><%= flash[:notice] %></p>
+      <%= yield %>
     </main>
 
     <footer>
