--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,23 +1,30 @@
-<h2>User info</h2>
-<%= form_with model: @user do |f| %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+        <%= form_with model: @user do |f| %>
 
-<div class="form-group">
-  <label for="user_name">Name</label>
-  <%= f.text_field :name %>
+        <div class="form-group">
+          <label for="user_name">Name</label>
+          <br>
+          <%= f.text_field :name,class: "form-control name" %>
+        </div>
+
+        <div class="form-group">
+          <label for="user_image">Image</label>
+          <br>
+          <%=f.file_field:get_profile_image,placeholder:"プロフィール画像",accept:"image/*" %>
+        </div>
+
+        <div class="form-group">
+          <label for="user_introduction">Introduction</label>
+          <br>
+          <%= f.text_area :introduction, class: "form-control introduction" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit"Update User",class: "btn btn-secondary " %>
+        </div>
+          <% end %>
+    </div>
+  </div>
 </div>
-
-<div class="form-group">
-  <label for="user_image">Image</label>
-  <%=f.file_field:get_profile_image,placeholder:"プロフィール画像",accept:"image/*" %>
-</div>
-
-<div class="form-group">
-  <label for="user_introduction">Introduction</label>
-  <%= f.text_area :introduction %>
-</div>
-<div class="form-group">
-  <%= f.submit"Update User" %>
-</div>
-  <% end %>
-
-
