--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,58 +6,62 @@
 
       <table class="table">
         <tbody>
+          <tr></tr>
           <tr>
-            <th>name
-            <%= @user.name %>
-            </th>
+            <th>name  </th>
+            <th><%= @user.name %></th>
           </tr>
           <tr>
-            <th>introduction
-            <%= @user.introduction %>
-            </th>
+            <th>introduction</th>
+            <th><%= @user.introduction %></th>
           </tr>
         </tbody>
       </table>
 
       <div class="row">
-        <a><%=link_to "edit",edit_user_path(@user.id) %></a>
+        <%=link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
       </div>
 
-      <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book do |f| %>
-      <div class="form-group">
-        <label for="book_title">Title</label><br/>
-        <%=f.text_field :title %>
-      </div>
-      <div class="form-group">
-        <label for="book_opinion">Opinion</label><br/>
-        <%=f.text_area :body %>
-      </div>
-       <div class="form-group">
-        <%=f.submit"Create Book",class: "btn-btn-success btn-lg" %>
-
-      </div>
-      <% end %>
+        <h2 class="mt-3">New book</h2>
+        <%= form_with model: @book do |f| %>
+        <div class="form-group">
+          <label for="book_title">Title</label><br/>
+          <%=f.text_field :title %>
+        </div>
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label><br>
+          <%=f.text_area :body %>
+        </div>
+        <div class="form-group">
+          <%=f.submit"Create Book",class: "btn btn-success" %>
+        </div>
+        <% end %>
     </div>
+
+
     <div class="col-md-8 offset-md-1">
     <h2>Users</h2>
     <table class="table">
       <thead>
         <tr>
+          <th></th>
           <th>image</th>
           <th>name</th>
           <th colspan="3"></th>
         </tr>
       </thead>
       <tboby>
-      <% @users.each do |user| %>
+      <% @books.each do |book| %>
         <tr>
-          <td><%= image_tag user.get_profile_image(100,100) %></td>
-          <td><%= user.name %></td>
-          <td><%= link_to "show",user_path(@user.id) %></td>
+          <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+          <td><%= book.user.name %></td>
+          <td><%= link_to "show",user_path(book.user.id) %></td>
        </tr>
       <% end %>
       </table>
     </div>
+  </div>
 </div>
 
