--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,65 +6,64 @@
 
       <table class="table">
         <tbody>
+          <tr></tr>
           <tr>
-            <th>name
-            <%= @user.name %>
-            </th>
+            <th>name  </th>
+            <th><%= @user.name %></th>
           </tr>
           <tr>
-            <th>introduction
-            <%= @user.introduction %>
-            </th>
+            <th>introduction</th>
+            <th><%= @user.introduction %></th>
           </tr>
         </tbody>
       </table>
 
       <div class="row">
-        <a><%=link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %></a>
+        <%=link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %>
         <i class="fas fa-user-cog"></i>
         <% end %>
       </div>
 
-      <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book do |f| %>
-      <div class="form-group">
-        <label for="book_title">Title</label><br/>
-        <%=f.text_field :title %>
-      </div>
-      <div class="form-group">
-        <label for="book_opinion">Opinion</label><br/>
-        <%=f.text_area :body %>
-      </div>
-       <div class="form-group">
-        <%=f.submit"Create Book",class: "btn-btn-success btn-lg" %>
-
-      </div>
-      <% end %>
+        <h2 class="mt-3">New book</h2>
+        <%= form_with model: @book do |f| %>
+        <div class="form-group">
+          <label for="book_title">Title</label><br/>
+          <%=f.text_field :title %>
+        </div>
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label><br>
+          <%=f.text_area :body %>
+        </div>
+        <div class="form-group">
+          <%=f.submit"Create Book",class: "btn btn-success" %>
+        </div>
+        <% end %>
     </div>
 
-<div class="col-md-8 offset-md-1">
-<h2>Books</h2>
- <table class="table table-hover table-inverse">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @books.each do |book| %>
-    <tr>
-     <td><%= image_tag book.user.get_profile_image(100,100) %></td>
-     <td><%= link_to book_path(book.id) do %>
-     <%= book.title %>
-     <% end %></td>
-     <td><%= book.body %></td>
 
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-</div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th>
+             <th>Title</th>
+             <th>Opinion</th>
+             <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+          <tr>
+             <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+             <td><%= link_to book_path(book.id) do %>
+             <%= book.title %>
+             <% end %></td>
+             <td><%= book.body %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
