--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
-      <h1>welcome to<strong>Bookers</strong></h1>
-      <p>In<strong>Bookers</strong></p>
+      <h1>welcome to
+        <i class="fa-solid fa-book"></i>
+        <strong>Bookers</strong>
+      </h1>
+      <p>In
+        <i class="fa-solid fa-book"></i>
+        <strong>Bookers,</strong>
+      </p>
       <p>you can stare and exchange your opinions ,
        inpressions , and emotions</p>
       <p>about various books!</p>
