--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,22 +40,30 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to destroy_user_session_path, class: "nav-link text-light", method: :get  do  %>
+                  <%= link_to destroy_user_session_path, class: "nav-link text-light", method: :get  do %>
                   <i class="fas fa-sign-out-alt"></i> Log out
                   <% end %>
                 </li>
               <% else %>
                 <li>
-                  <%= link_to "Home",root_path %>
+                  <%= link_to root_path, class: "nav-link text-light" do %>
+                  <i class="fas fa-home"></i> Home
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "About",homes_about_path%>
+                  <%= link_to homes_about_path, class: "nav-link text-ligth" do %>
+                  <i class="fa-solid fa-link"></i> About
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Sign up",new_user_registration_path %>
+                  <%= link_to new_user_registration_path, class: "nav-link text-light" do %>
+                  <i class="fa-solid fa-user-plus"></i> Sign up
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Log in",user_session_path,method: :post %>
+                  <%= link_to user_session_path ,class: "nav-link text-light", method: :post do %>
+                  <i class="fa-solid fa-right-to-bracket"></i> Log in
+                  <% end %>
                 </li>
               <% end %>
             </ul>
