--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,16 @@
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
+      <div id="error_explanation">
+        <% if @user.errors.any? %>
+          <h3><%= @user.errors.count %>error prohibited this obj from being saved:</h3>
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+      </div>
       <%= image_tag @user.get_profile_image(100,100) %>
 
       <table class="table">
