--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -53,11 +53,11 @@
         </tr>
       </thead>
       <tboby>
-      <% @books.each do |book| %>
+      <% @users.each do |user| %>
         <tr>
-          <td><%= image_tag book.user.get_profile_image(100,100) %></td>
-          <td><%= book.user.name %></td>
-          <td><%= link_to "show",user_path(book.user.id) %></td>
+          <td><%= image_tag user.get_profile_image(100,100) %></td>
+          <td><%= user.name %></td>
+          <td><%= link_to "show",user_path(user.id) %></td>
        </tr>
       <% end %>
       </table>
