--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -55,10 +55,12 @@
         <tbody>
           <% @books.each do |book| %>
           <tr>
-             <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+             <td><%= link_to user_path(@user.id) do %>
+               <%= image_tag book.user.get_profile_image(100,100) %></td>
+               <% end %>
              <td><%= link_to book_path(book.id) do %>
-             <%= book.title %>
-             <% end %></td>
+               <%= book.title %>
+               <% end %></td>
              <td><%= book.body %></td>
           </tr>
           <% end %>
